# wise_nutrition

./: .env.example  .gitignore  PLANNING.md  README.md  TASK.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_api.py  setup.py  test_supabase_connection.py
docs/: authentication.md
frontend/: package-lock.json  package.json
scripts/: PRD.txt  task-complexity-report.json
tests/: __init__.py  test_agent.py  test_chroma_embedding_manager.py  test_citation_generator.py  test_cli_embed.py  test_embedding_factory.py  test_embedding_manager.py  test_enhanced_retriever.py  test_hybrid_retrieval.py  test_memory.py  test_pdf_loader.py  test_query_reformulation.py  test_rag_chain.py  test_reranker.py  test_retrieval.py  test_supabase_integration.py
tests/auth/: test_firebase_auth.py
tests/routers/: test_rag.py
tests/utils/: test_config.py
wise_nutrition/: __init__.py  agent.py  api.py  citation_generator.py  cli.py  config.py  db_init.py  dependencies.py  enhanced_retriever.py  memory.py  models.py  query_reformulation.py  rag_chain.py  reranker.py  retrieval.py  retriever.py  vector_store.py
wise_nutrition/api/: __init__.py  main.py
wise_nutrition/auth/: __init__.py  firebase_auth.py
wise_nutrition/cli/: __init__.py  embed.py  main.py
wise_nutrition/document_loaders/: __init__.py  pdf_loader.py
wise_nutrition/embeddings/: __init__.py  chroma_embedding_manager.py  chroma_example.py  embedding_factory.py  embedding_manager.py  pdf_loader.py
wise_nutrition/memory/: __init__.py  conversation_memory.py
(+23 files in other folders)
